--- a/Logistic_Regression_Case_Study_CustomerChurn.ipynb
+++ b/Logistic_Regression_Case_Study_CustomerChurn.ipynb
@@ -540,7 +540,7 @@
         "id": "UZ24H5Rc5ZuJ"
       },
       "source": [
-        "### Inspect MonthlyCharges"
+        "### Inspecting MonthlyCharges"
       ]
     },
     {
@@ -582,7 +582,7 @@
         "id": "GkJDu6BG5cD5"
       },
       "source": [
-        "## Inspect Tenture"
+        "## Inspecting Tenture"
       ]
     },
     {
@@ -624,7 +624,7 @@
         "id": "sAHtZJE58YqB"
       },
       "source": [
-        "### Inspect Partner"
+        "### Inspecting Partner"
       ]
     },
     {
@@ -711,7 +711,7 @@
         "id": "JOAT69EC80GK"
       },
       "source": [
-        "### Inspect Senior Citizen"
+        "### Inspecting Senior Citizen"
       ]
     },
     {
@@ -1559,7 +1559,7 @@
         "id": "uMl1sIkacexx"
       },
       "source": [
-        "Inspect distribution of target in training and test set"
+        "Inspecting distribution of target in training and test set"
       ]
     },
     {
@@ -1858,7 +1858,7 @@
         "for fold, (train, validation) in enumerate(kf.split(X=kfold_df)):\n",
         " kfold_df.loc[validation, 'kfold'] = fold\n",
         "\n",
-        "# Inspect training data frame\n",
+        "# Inspecting training data frame\n",
         "kfold_df"
       ]
     },
@@ -2365,7 +2365,7 @@
         "id": "Ig6phLENcEWN"
       },
       "source": [
-        "Inspect Confusion Matrix"
+        "Inspecting Confusion Matrix"
       ]
     },
     {
